--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
 <body>
   <div class = 'box'>
- <h1>Мій сайт</h1>
+ <h1>картка</h1>
+    <img src = 'https://plus.unsplash.com/premium_photo-1669814666084-36dbf86ab6cd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1Mnx8fGVufDB8fHx8fA%3D%3D'/>
+    <p>some text ... some text ... some text ... <p>
+       <p>some text ... some text ... some text ... <p>
+          <p>some text ... some text ... some text ... </p>
+             <p>some text ... some text ... some text ... <p>
   </div>
 </body>
 
